# DIPLOMA

./: CV_System_of_GumanoidRobot.pptx  NIR_7.docx  README.md  YOEO5OpenVino.cpp  haha.py  naming.txt  sources.txt
weights/best_openvino_model/: best.xml  metadata.yaml
weights/yolov8n_openvino_model/: metadata.yaml  yolov8n.xml
yolov8/: YoloV8OpenVino_Api2.cpp  YoloV8OpenVino_Api2.hpp  inference_yolov8.py
yolov8/detectwebcam_YOLOv8_IR_InfEngine/: CMakeLists.txt  detect_YOLOv8_IR.cpp
yolov8/detectwebcam_YOLOv8_IR_cpp/: CMakeLists.txt  detect_YOLOv8_IR.cpp
yolov8/detectwebcam_YOLOv8_IR_opencv_cpp/: detect_YOLOv8_IR.cpp
